--- a/examples/schunk_wsg/BUILD.bazel
+++ b/examples/schunk_wsg/BUILD.bazel
@@ -57,8 +57,12 @@ drake_cc_googletest(
     # This test is prohibitively slow with --compilation_mode=dbg.
     disable_in_compilation_mode_dbg = True,
     # TODO(betsymcphail): Re-enable this test when it no longer
-    # causes timeouts in kcov.
-    tags = ["no_kcov"],
+    # exceeds timeout under DRD, Helgrind, and kcov.
+    tags = [
+        "no_drd",
+        "no_helgrind",
+        "no_kcov",
+    ],
     deps = [
         "//attic/multibody:rigid_body_tree",
         "//attic/multibody:rigid_body_tree_construction",
