--- a/bindings/pydrake/manipulation/BUILD.bazel
+++ b/bindings/pydrake/manipulation/BUILD.bazel
@@ -78,6 +78,11 @@ drake_py_unittest(
     data = [
         "//multibody/benchmarks/acrobot:models",
     ],
+    # Tcl/Tk errors under DRD and Helgrind.
+    tags = [
+        "no_drd",
+        "no_helgrind",
+    ],
     deps = [
         ":simple_ui_py",
         "//bindings/pydrake/multibody",
