--- a/doc/BUILD.bazel
+++ b/doc/BUILD.bazel
@@ -36,9 +36,14 @@ drake_py_binary(
         "images/doxygen_instructions/visual_studio_build_targets.png",
         "sample_vimrc",
     ],
-    # Some (currently disabled) Sphinx extensions try to reach out to the
-    # network; we should fail-fast if someone tries to turn them on.
-    tags = ["block-network"],
+    tags = [
+        # Some (currently disabled) Sphinx extensions try to reach out to the
+        # network; we should fail-fast if someone tries to turn them on.
+        "block-network",
+        # Test exceeds timeout under DRD and Helgrind.
+        "no_drd",
+        "no_helgrind",
+    ],
     test_rule_args = [
         "--out_dir=<test>",
     ],
