--- a/geometry/render/BUILD.bazel
+++ b/geometry/render/BUILD.bazel
@@ -7,6 +7,7 @@ load(
     "drake_cc_package_library",
 )
 load("//tools/lint:lint.bzl", "add_lint_tests")
+load("//tools/skylark:test_tags.bzl", "vtk_test_tags")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -80,6 +81,24 @@ drake_cc_googletest(
         ":render_engine",
         "//common/test_utilities",
         "//geometry:geometry_ids",
+        "//geometry/test_utilities:dummy_render_engine",
+    ],
+)
+
+drake_cc_googletest(
+    name = "render_engine_vtk_test",
+    data = [
+        "//systems/sensors:test_models",
+    ],
+    tags = vtk_test_tags(),
+    deps = [
+        ":render_engine_vtk",
+        ":render_label_manager",
+        "//common:find_resource",
+        "//common/test_utilities:eigen_matrix_compare",
+        "//common/test_utilities:expect_throws_message",
+        "//geometry/test_utilities:dummy_render_engine",
+        "//math:geometric_transform",
     ],
 )
 
