--- a/tools/dynamic_analysis/bazel.rc
+++ b/tools/dynamic_analysis/bazel.rc
@@ -196,8 +196,8 @@ build:memcheck --copt -g
 # https://sourceforge.net/p/valgrind/mailman/valgrind-developers/?viewmonth=201806&viewday=11&style=flat
 build:memcheck --copt -O2
 build:memcheck --run_under=//tools/dynamic_analysis:valgrind
-build:memcheck --test_tag_filters=-gurobi,-mosek,-snopt,-no_memcheck
-build:memcheck --test_lang_filters=-sh,-py
+build:memcheck --test_tag_filters=-gurobi,-mosek,-snopt
+build:memcheck --test_lang_filters=-sh
 # Slowdown factor can range from 5-100.
 # See http://valgrind.org/info/about.html
 build:memcheck --test_timeout=1500,7500,22500,90000  # 25x
@@ -210,9 +210,8 @@ build:memcheck_everything --define=WITH_SNOPT=ON
 build:memcheck_everything --copt -g
 # https://sourceforge.net/p/valgrind/mailman/valgrind-developers/?viewmonth=201806&viewday=11&style=flat
 build:memcheck_everything --copt -O2
-build:memcheck_everything --test_tag_filters=-no_memcheck
 build:memcheck_everything --run_under=//tools/dynamic_analysis:valgrind
-build:memcheck_everything --test_lang_filters=-sh,-py
+build:memcheck_everything --test_lang_filters=-sh
 # Slowdown factor can range from 5-100.
 # See http://valgrind.org/info/about.html
 build:memcheck_everything --test_timeout=1500,7500,22500,90000  # 25x
@@ -227,7 +226,7 @@ build:memcheck_everything --test_timeout=1500,7500,22500,90000  # 25x
 # memcheck` to recompile with line numbers and lower optimization levels.
 #
 build:fastmemcheck --run_under=//tools/dynamic_analysis:valgrind
-build:fastmemcheck --test_lang_filters=-sh,-py
+build:fastmemcheck --test_lang_filters=-sh
 # Slowdown factor can range from 5-100.
 # See http://valgrind.org/info/about.html
 build:fastmemcheck --test_timeout=1500,7500,22500,90000  # 25x
