--- a/tutorials/BUILD.bazel
+++ b/tutorials/BUILD.bazel
@@ -47,7 +47,9 @@ drake_jupyter_py_binary(
 drake_jupyter_py_binary(
     name = "rendering_multibody_plant",
     add_test_rule = 1,
-    deps = [
+    deps = ["@github3_py",
+        "@itkwidgets",
+        "@pyntcloud"
         "//bindings/pydrake",
     ],
 )
