--- a/bindings/pydrake/common/BUILD.bazel
+++ b/bindings/pydrake/common/BUILD.bazel
@@ -45,8 +45,8 @@ drake_pybind_library(
     name = "_init_py",
     cc_deps = [
         "//bindings/pydrake:documentation_pybind",
-        "//bindings/pydrake/common:text_logging_pybind",
         "//bindings/pydrake/common:deprecation_pybind",
+        "//bindings/pydrake/common:text_logging_pybind",
         "//bindings/pydrake/common:value_pybind",
         "//common:nice_type_name_override_header",
     ],
@@ -362,6 +362,11 @@ install(
 drake_py_unittest(
     name = "module_test",
     data = ["//examples/atlas:models"],
+    deps = [":module_py"],
+)
+
+drake_py_unittest(
+    name = "text_logging_test",
     deps = [":module_py"],
 )
 
