WIP: Add install_helpers

--- a/tools/install/BUILD.bazel
+++ b/tools/install/BUILD.bazel
@@ -24,6 +24,12 @@ py_library(
     visibility = ["//visibility:public"],
 )
 
+py_library(
+    name = "install_helper",
+    srcs = ["install_helper.py"],
+)
+
+
 exports_files(
     [
         "install.py.in",
